# mariadb-analyzer

./: .gitignore  Dockerfile  LICENSE  README.md  mariadb-analyzer.py  pyproject.toml  requirements.txt
src/mariadb_analyzer/: __init__.py  cli.py
test/: __init__.py  execute-sakila-queries.sh  import-sakila-db.sh  run-docker-mariadb-10.sh  run-docker-mariadb-11.sh  run-docker-mariadb-12.sh  sakila-queries.sql  test_cli.py
