[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mariadb-analyzer"
version = "0.6.1"
description = """A compact command-line analysis and reporting tool for MariaDB servers.
MariaDB Analyzer connects to a running MariaDB instance, collects configuration variables, status metrics, and metadata, and presents the information as a structured terminal dashboard.
In addition to terminal output, the tool can also generate an HTML report that captures the current state of the database server for documentation, troubleshooting, or later review.
"""
readme = "README.md"
authors = [
  { name = "Peter Pakula" }
]
license = { text = "Apache License 2.0" }
requires-python = ">=3.9"

dependencies = [
  "mariadb",
  "python-dotenv",
  "rich"
]

[project.scripts]
mariadb-analyzer = "mariadb_analyzer.cli:generate_report"
